@@ -1,0 +1,27 @@
+============================================================================
+THIS MESSAGE WAS GENERATED BY THE BUGTRACKER SOFTWARE PLEASE DO NOT REPLY
+
+INSTEAD FOLLOW BUG'S URL BELOW IN ORDER TO DETAIL BUG:
+============================================================================
+         Bug #: {bugid} ({bugurl})
+   Reported By: {reporter}
+----------------------------------------------------------------------------
+       Summary: {title}
+           URL: {url}
+       Product: {project_id}
+       Version: {version_id}
+     Component: {component_id}
+        Status: {status_id}
+    Resolution: {resolution_id}
+      Severity: {severity_id}
+    OS/Version: {os_id}
+      Priority: {priority}
+   Assigned To: {assignedto}
+============================================================================
+<!-- BEGIN commentblock -->
+                              COMMENTS
+
+----- Posted by {oldpostedby} at {oldpostedon} -----
+{oldcomments}
+
+<!-- END commentblock -->
